GP-9 Получение КПП по id
